# climbing-board

./: Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
climbing_board/: interfaces.py  main.py
docs/: climbingboard.rst  conf.py  index.rst  modules.rst
src/: Board.py  BoardPicture.py  BoardService.py  BoulderProblem.py  BoulderProblemGeneration.py  BoulderProblemHold.py  Comparable.py  ConfigurationService.py  Hold.py  HoldKind.py  Position.py  TinyDbContext.py  configuration.py  main.py
src/climbingboard/: Board.py  BoardPicture.py  BoardService.py  BoulderProblem.py  BoulderProblemGeneration.py  BoulderProblemHold.py  Hold.py  HoldKind.py  board.py  boardpicture.py  boardservice.py  boulderproblem.py  boulderproblemgeneration.py  boulderproblemhold.py  comparable.py  configuration.py  configurationservice.py  db.json  hold.py  holdkind.py  main.py  setup.py  tinydbcontext.py
test/: test_board.py  test_generation.py  test_hold.py  test_persistence.py
tests/: __init__.py  test_board.py  test_generation.py  test_hold.py  test_persistence.py
