[metadata]
name = climbingboard
version = attr: climbingboard.version.__version__
author = clementbm
author_email = 
license = MIT
license_file = LICENSE
description = A climbing board package
long_description = file:README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/ClementBM/ClimbingBoard
url = https://github.com/ClementBM/ClimbingBoard

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    black
python_requires = >=3.6

[options.packages.find]
where = src
